--- a/1-Ramp up/Practica_Ramp_Up.ipynb
+++ b/1-Ramp up/Practica_Ramp_Up.ipynb
@@ -31,6 +31,133 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "¡Bienvenido!\n",
+      "\n",
+      "Inserta 1 para añadir un nuevo empleado y su salario\n",
+      "Inserta 2 para imprimir los nombres y salarios de todos los empleados\n",
+      "Inserta 3 para mostrar el número de empleados\n",
+      "Inserta 4 para imprimir los nombres de los empleados con sueldos superiores a 400000\n",
+      "Inserta 5 para subir un 5% los sueldos por debajo de 10000\n",
+      "Inserta 6 para mostrar el total de todos los salarios\n",
+      "Inserta 7 para salir del programa\n",
+      "\n",
+      "    \n",
+      "\n",
+      "¡Gracias por usar el programa!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# una lista para nombres y una lista para sueldos\n",
+    "lista_nombres = []\n",
+    "lista_salarios = []\n",
+    "\n",
+    "# insertamos nuevos nombre-salario\n",
+    "def nuevo_empleado(nombre, salario):\n",
+    "    lista_nombres.append(nombre)\n",
+    "    lista_salarios.append(salario)\n",
+    "\n",
+    "# imprimimos todos los nombre-salario\n",
+    "def imprime_empleados():\n",
+    "    for posicion in range(len(lista_nombres)):\n",
+    "        print(\"Nombre:\", lista_nombres[posicion], end = \" \")\n",
+    "        print(\"Sueldo:\", lista_salarios[posicion], end = \"\\n\")\n",
+    "\n",
+    "# imprimir cantidad de empleados\n",
+    "def imprime_cantidad_empleados():\n",
+    "    print(\"Cantidad de empleados: \", len(lista_nombres))\n",
+    "\n",
+    "# imprimir empleados con salarios mayores de 40 000 dolares\n",
+    "def sueldos_altos():\n",
+    "\n",
+    "    print(\"Sueldos mayores de 40000:\")\n",
+    "\n",
+    "    # recorro la lista de sueldos\n",
+    "    for posicion in range(len(lista_nombres)):\n",
+    "\n",
+    "        # si ese sueldo es mayor de 40 000, cojo el nombre\n",
+    "        if lista_salarios[posicion] > 40000:\n",
+    "            print(lista_nombres[posicion])\n",
+    "\n",
+    "# dar un aumento de un 5% a los sueldos menores de 10 000\n",
+    "def aumento():\n",
+    "    # recorro la lista de sueldos\n",
+    "    for posicion in range(len(lista_salarios)):\n",
+    "        if lista_salarios[posicion] < 10000:\n",
+    "            lista_salarios[posicion] = lista_salarios[posicion] * 1.05\n",
+    "\n",
+    "    print(\"¡Los sueldos bajos se han subido!\")\n",
+    "\n",
+    "# imprimir la suma total de todos los sueldos\n",
+    "def masa_salarial():\n",
+    "    total = sum(lista_salarios)\n",
+    "    print(\"Suma de todos los sueldos: \", total)\n",
+    "\n",
+    "# menu\n",
+    "def menu():\n",
+    "\n",
+    "    mensaje_inicial = \"\"\"\n",
+    "\n",
+    "¡Bienvenido!\n",
+    "\n",
+    "Inserta 1 para añadir un nuevo empleado y su salario\n",
+    "Inserta 2 para imprimir los nombres y salarios de todos los empleados\n",
+    "Inserta 3 para mostrar el número de empleados\n",
+    "Inserta 4 para imprimir los nombres de los empleados con sueldos superiores a 400000\n",
+    "Inserta 5 para subir un 5% los sueldos por debajo de 10000\n",
+    "Inserta 6 para mostrar el total de todos los salarios\n",
+    "Inserta 7 para salir del programa\n",
+    "\n",
+    "    \"\"\"\n",
+    "    print(mensaje_inicial)\n",
+    "\n",
+    "    opcion = int(input(\"Inserta option: \"))\n",
+    "    while opcion != 7:\n",
+    "        if opcion == 1:\n",
+    "            nombre = input(\"Nombre de empleado: \")\n",
+    "            salario = int(input(\"Salario: \"))\n",
+    "\n",
+    "            nuevo_empleado(nombre, salario)\n",
+    "\n",
+    "        elif opcion == 2:\n",
+    "            imprime_empleados()\n",
+    "\n",
+    "        elif opcion == 3:\n",
+    "            imprime_cantidad_empleados()\n",
+    "\n",
+    "        elif opcion == 4:\n",
+    "            sueldos_altos()\n",
+    "\n",
+    "        elif opcion == 5:\n",
+    "            aumento()\n",
+    "\n",
+    "        elif opcion == 6:\n",
+    "            masa_salarial()\n",
+    "\n",
+    "        print() # nueva linea\n",
+    "        opcion = int(input(\"Inserta opcion: \"))\n",
+    "\n",
+    "    print(\"¡Gracias por usar el programa!\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# ejecutamos el programa\n",
+    "menu()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +191,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Declares and asks for user to input loan amount. Then converts to float\n",
+    "\n",
+    "total_hipoteca = input (\"introduce el total de la hipoteca \\n\")\n",
+    "print(type(total_hipoteca))\n",
+    "total_hipoteca = float (total_hipoteca)\n",
+    "\n",
+    "# Declares and asks user to input number of payments in years. Then converts to float. Years * 12 to get\n",
+    "#  total number of months\n",
+    "meses = float(input('How many years will you have the loan? \\n')) *12\n",
+    "\n",
+    "# Declares and asks user to input interest rate. Then converts to float and input interest rate is /100/12\n",
+    "interestRate = input('Enter Interest Rate \\n')\n",
+    "interestRate = float(interestRate) / 100 / 12\n",
+    "\n",
+    "# Formula to calculate monthly payments\n",
+    "cuota = total_hipoteca* (interestRate * (1 + interestRate) ** meses) / ((1 + interestRate) ** meses - 1)\n",
+    "\n",
+    "\n",
+    "# Prints monthly payment on next line and reformat the string to a float using 2 decimal places\n",
+    "\n",
+    "print(\"The monthly mortgage payment is\\n (%.2f) \" % cuota)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,6 +264,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tu codigo va aquí\n",
+    "\n",
+    "balance = total_hipoteca\n",
+    "\n",
+    "print (\"mes  cuota  intereses  principal  pendiente\")\n",
+    "\n",
+    "\n",
+    "for i in range(int(meses)):\n",
+    "    interest = balance * interestRate\n",
+    "    principal = cuota - interest\n",
+    "    balance = balance - principal \n",
+    "    print (i,\" %.2f \"  % cuota, \" %.2f \"  %  interest, \" %.2f \"  % principal, \" %.2f \"  % balance)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,7 +310,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# tu codigo aqui. Tenemos que usar la funcion sqrt del módulo math\n",
+    "\n",
+    "\n",
+    "import math  # Makes the math library available.\n",
+    "\n",
+    "print(\"This program finds the real solutions to a quadratic\")\n",
+    "print()\n",
+    "\n",
+    "a = float(input(\"Enter coefficient a: \"))\n",
+    "b = float(input(\"Enter coefficient b: \"))\n",
+    "c = float(input(\"Enter coefficient c: \"))\n",
+    "try:\n",
+    "    discRoot = math.sqrt(b * b - 4 * a * c)\n",
+    "    root1 = (-b + discRoot) / (2 * a)\n",
+    "    root2 = (-b - discRoot) / (2 * a)\n",
+    "except:\n",
+    "    print(\"Raiz negativa\")\n",
+    "\n",
+    "print()\n",
+    "print(\"The solutions are:\", root1, root2 )\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "La media de los numeros es 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"¿Cuantos numeros tienes?: \"))\n",
+    "\n",
+    "total = 0.0\n",
+    "for i in range(n):\n",
+    "    x = float(input(\"Introduce un numero >> \"))\n",
+    "    total = total + x\n",
+    "\n",
+    "print(\"\\nLa media de los numeros es\", total / n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "La media de los numeros es 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"¿Cuantos numeros vas a introducir?: \"))\n",
+    "x = []\n",
+    "for i in range(n):\n",
+    "    x.append((float(input(\"Introduce un numero >> \"))))\n",
+    "\n",
+    "print(\"\\nLa media de los numeros es\", sum(x)/len(x))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,10 +417,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = ['a', 'b', 'c', 'd']\n",
+    "str1 = ''.join(s)\n",
+    "print(str1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,10 +445,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[676, 729, 784, 841, 900]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = list()\n",
+    "for i in range(1,31):\n",
+    "    l.append(i**2)\n",
+    "print(l[:5])\n",
+    "print(l[-5:])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +492,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gadgets = [“Mobile”, “Laptop”, 100, “Camera”, 310.28, “Speakers”, 27.00, “Television”, 1000, “Laptop Case”, “Camera Lens”]"
+    "# gadgets = [“Mobile”, “Laptop”, 100, “Camera”, 310.28, “Speakers”, 27.00, “Television”, 1000, “Laptop Case”, “Camera Lens”]\n",
+    "\n",
+    "gadgets = [\"Mobile\", \"Laptop\", 100, \"Camera\", 310.28, \"Speakers\", 27.00, \n",
+    "           \"Television\", 1000, \"Laptop Case\", \"Camera Lens\"]\n",
+    " \n",
+    "str_items = []\n",
+    " \n",
+    "num_items = []\n",
+    " \n",
+    "#a)creating separate lists\n",
+    "\n",
+    "for item in gadgets: \n",
+    "     \n",
+    "    if type(item) is str:\n",
+    "    #if type(item) == str:\n",
+    "         \n",
+    "        str_items.append(item)\n",
+    "         \n",
+    "    elif type(item) is int or type(item) is float:\n",
+    "         \n",
+    "        num_items.append(item)\n",
+    " \n",
+    "  \n",
+    "print(str_items)\n",
+    " \n",
+    "print(num_items)\n",
+    " \n",
+    "print ('b)sorting strings list in ascending order, a-z')\n",
+    " \n",
+    "str_items.sort()\n",
+    " \n",
+    "print(str_items)\n",
+    " \n",
+    "print('sorting strings list in descending order z-a')\n",
+    " \n",
+    "# str_items.sort(key=str.lower, reverse=True)\n",
+    "\n",
+    "str_items.sort(reverse=True)\n",
+    "\n",
+    "print(str_items)\n",
+    " \n",
+    "#d)sorting number list from lowest to highest\n",
+    " \n",
+    "num_items.sort()\n",
+    " \n",
+    "print(num_items)\n",
+    " \n",
+    "#e)sorting number list from highest to lowest\n",
+    " \n",
+    "num_items.sort(reverse=True)\n",
+    " \n",
+    "print(num_items)\n",
+    "    \n"
    ]
   },
   {
@@ -260,7 +564,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sort the list and get the elements\n",
+    " \n",
+    "a_list = [84,84,86,86,85,85,85,83,23,45,84,1,2,0]\n",
+    "\n",
+    "a_list.sort(reverse=True) \n",
+    "print(a_list)\n",
+    " \n",
+    "first = a_list[0]\n",
+    " \n",
+    "second = None\n",
+    "\n",
+    "# comprobación para ver si el primero está duplicado. iteramos en la list hasta que encontramos un valor diferente y salimos del bucle\n",
+    "\n",
+    "for element in a_list:\n",
+    "    if element != first:\n",
+    "        second = element\n",
+    "        break;\n",
+    "\n",
+    "print(first,second)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -276,7 +600,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_str = input(\"introduce una palabra para ver si es un palíndromo: \")\n",
+    "\n",
+    "my_str = my_str.lower()\n",
+    "\n",
+    "# reverse the string\n",
+    "rev_str = reversed(my_str)\n",
+    "\n",
+    "# check if the string is equal to its reverse\n",
+    "if list(my_str) == list(rev_str):\n",
+    "   print(\"The string is a palindrome.\")\n",
+    "else:\n",
+    "   print(\"The string is not a palindrome.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
