--- a/1-Ramp up/5-OOP/Clases y Objetos.ipynb
+++ b/1-Ramp up/5-OOP/Clases y Objetos.ipynb
@@ -48,10 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    # Cosas de la clase\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +78,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(type(Coche))\n",
+    "print(type(str))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,19 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015B149C8>\n",
+      "<__main__.Coche object at 0x00000239B871BBC8>\n",
       "<class '__main__.Coche'>\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "primer_coche = Coche()\n",
+    "print(primer_coche)\n",
+    "print(type(primer_coche))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,15 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015B9A608>\n",
-      "<__main__.Coche object at 0x000001A015B9A088>\n"
+      "<__main__.Coche object at 0x00000239B6B8CA88>\n",
+      "<__main__.Coche object at 0x00000239B6B8C788>\n"
      ]
     },
     {
@@ -135,12 +146,20 @@
        "False"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "citroen = Coche()\n",
+    "seat = Coche()\n",
+    "\n",
+    "print(citroen)\n",
+    "print(seat)\n",
+    "\n",
+    "citroen == seat # son objetos diferentes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,23 +207,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015B9C708>\n",
+      "<__main__.Coche object at 0x00000239B8719388>\n",
       "4\n",
       "4\n",
-      "<__main__.Coche object at 0x000001A015B9CB08>\n",
+      "<__main__.Coche object at 0x00000239B8719E88>\n",
       "4\n",
       "4\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "citroen = Coche()\n",
+    "\n",
+    "print(citroen)\n",
+    "print(citroen.puertas)\n",
+    "print(citroen.ruedas)\n",
+    "\n",
+    "seat = Coche()\n",
+    "\n",
+    "print(seat)\n",
+    "print(seat.puertas)\n",
+    "print(seat.ruedas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,19 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015B9CA88>\n",
+      "<__main__.Coche object at 0x00000239B8712488>\n",
       "2\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "citroen = Coche()\n",
+    "citroen.puertas = 2\n",
+    "print(citroen)\n",
+    "print(citroen.puertas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015B9CC08>\n"
+      "<__main__.Coche object at 0x00000239B872B908>\n"
      ]
     },
     {
@@ -257,12 +297,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-f4f2d22f0ab1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmotor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15236/2063426419.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmotor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'Coche' object has no attribute 'motor'"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "seat = Coche()\n",
+    "\n",
+    "print(seat)\n",
+    "print(seat.motor)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,10 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche):   # es el constructor   Coche(marca_coche)  para llamar al constructor\n",
+    "        self.marca = marca_coche"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,21 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Coche object at 0x000001A015BA3088>\n",
+      "<__main__.Coche object at 0x00000239B8719788>\n",
       "4\n",
       "4\n",
       "Citroen\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "citroen = Coche(\"Citroen\")\n",
+    "\n",
+    "print(citroen)\n",
+    "print(citroen.puertas)\n",
+    "print(citroen.ruedas)\n",
+    "print(citroen.marca)"
+   ]
   },
   {
    "cell_type": "markdown",
