--- a/1-Ramp up/5-OOP/Clases y Objetos.ipynb
+++ b/1-Ramp up/5-OOP/Clases y Objetos.ipynb
@@ -383,10 +383,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Citroen\n",
+      "Seat\n",
+      "Renault\n"
+     ]
+    }
+   ],
+   "source": [
+    "citroen = Coche(\"Citroen\")\n",
+    "seat = Coche(\"Seat\")\n",
+    "renault = Coche(\"Renault\")\n",
+    "\n",
+    "print(citroen.marca)\n",
+    "print(seat.marca)\n",
+    "print(renault.marca)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,10 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche, num_puertas):\n",
+    "        self.marca = marca_coche\n",
+    "        self.num_puertas = num_puertas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,10 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "    retrovisores = 3\n",
+    "    motor = True\n",
+    "\n",
+    "    def __init__(self, marca_coche, num_puertas, combustible):\n",
+    "        self.marca = marca_coche\n",
+    "        self.num_puertas = num_puertas\n",
+    "        self.combustible = combustible"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,10 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche, num_puertas):\n",
+    "        self.marca_coche = marca_coche\n",
+    "        self.num_puertas = num_puertas\n",
+    "\n",
+    "    def caracteristicas(self):\n",
+    "        return \"Marca: \" + self.marca_coche + \". Num Puretas: \" + str(self.num_puertas) + \". Num Ruedas: \" + str(self.ruedas)"
+   ]
   },
   {
    "cell_type": "code",
@@ -454,7 +499,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "mi_coche = Coche(\"Audi\", 4)\n",
+    "print(mi_coche.caracteristicas())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,10 +533,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "anios_compra = 555555\n",
+    "\n",
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca, puertas, anios_compra, precio):\n",
+    "        self.marca_coche = marca\n",
+    "        self.puertas = puertas\n",
+    "        self.anios_compra = anios_compra\n",
+    "        self.precio = precio\n",
+    "\n",
+    "    def caracteristicas(self):\n",
+    "        return \"Marca: \" + self.marca_coche + \"; Num. Puertas: \" + str(self.puertas)\n",
+    "\n",
+    "    def precio_actual(self):\n",
+    "        if self.anios_compra <= 5:\n",
+    "            return 0.5 * self.precio\n",
+    "        else:\n",
+    "            return 0.3 * self.precio   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500.0\n",
+      "300.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bmw1 = Coche(\"BMW\", 4, 5, 1000)\n",
+    "print(bmw1.precio_actual())\n",
+    "\n",
+    "bmw2 = Coche(\"BMW\", 4, 6, 1000)\n",
+    "print(bmw2.precio_actual())\n",
+    "bmw2.ruedas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -500,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
