--- a/1-Ramp up/6-Programacion funcional/Programacion funcional.ipynb
+++ b/1-Ramp up/6-Programacion funcional/Programacion funcional.ipynb
@@ -41,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lista = [1,2,3,4,5]\n",
     "\n",
@@ -62,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lista = [1,2,3]\n",
     "def suma_fun(lista):\n",
@@ -109,20 +131,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Declaramos funcion\n",
-    "\n",
+    "def suma(x,y):\n",
+    "    return x + y\n",
     "\n",
     "# Guardamos en variable\n",
-    "\n",
+    "suma_var = suma\n",
     "\n",
     "# Vemos el tipo\n",
+    "print(type(suma_var))\n",
     "\n",
-    "\n",
-    "# Usamos la funcion\n"
+    "# Usamos la funcion\n",
+    "suma_var(5,7)"
    ]
   },
   {
@@ -134,18 +176,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x, y)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda x,y: x + y"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Si la asignamos a una variable\n"
+    "# Si la asignamos a una variable\n",
+    "suma_lambda = lambda x,y: x + y\n",
+    "\n",
+    "suma_lambda(5,7)\n"
    ]
   },
   {
@@ -159,9 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40.4440297, -3.6956047)\n",
+      "(40.4585318, -3.684715)\n"
+     ]
+    }
+   ],
    "source": [
     "estaciones = ((40.4440297, -3.6956047), (40.4585318, -3.684715))\n",
     "\n",
@@ -174,9 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.4440297\n",
+      "-3.6956047\n"
+     ]
+    }
+   ],
    "source": [
     "lat = lambda x: x[0]\n",
     "lon = lambda x: x[1]\n",
@@ -205,10 +292,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mult_tres_elem = lambda x,y,z: x * y * z\n",
+    "mult_tres_elem(1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "raiz = lambda x: math.sqrt(x)\n",
+    "raiz(25)"
+   ]
   },
   {
    "cell_type": "markdown",
